# forex-ai

./: .env.example  .gitignore  COMPLETE_AUDIT_RESULTS.md  Cargo.toml  DEEP_DIVE_FINDINGS.md  FIXES_README.md  GEMINI_MIGRATION_AUDIT_REPORT.md  HARDWARE_CONFIG.md  HPC_250_CORE_GUIDE.md  KAN_COMPATIBILITY_ISSUE.txt  PHASE_1_AND_2_COMPLETE.txt  PROJECT_STATUS_2026-01-06.txt  PYTHON_TO_RUST_MIGRATION.md  PYTHON_TO_RUST_MIGRATION_PLAN.md  QUICKSTART.md  RUST_MIGRATION_PLAN.txt  RUST_MODELS_USAGE_GUIDE.md  THREAD_FIX_EXPLAINED.md  TREE_MODELS_IMPLEMENTATION_COMPLETE.txt  TREE_MODELS_RUST_SPEC.txt  TREE_MODELS_STATUS.txt  analyze_bot.py  audit17.md  check_url.py  clean_artifacts.py  clean_cache.py  clean_models.py  config.wsl.yaml  config.yaml  config.yaml.bak  estimate_time.py  forex-ai.py  forex-bot.service  keys.b64  keys.example.txt  keys.txt  launch_ddp.sh  metrics.sqlite  package-lock.json  pyproject.toml  (+18 more)
.claude/: settings.local.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
crates/forex-bindings/: Cargo.toml
crates/forex-bindings/src/: lib.rs
crates/forex-cli/: Cargo.toml
crates/forex-cli/src/: main.rs
crates/forex-core/: Cargo.toml
crates/forex-core/src/: config.rs  lib.rs  logging.rs  storage.rs  system.rs
crates/forex-core/src/domain/: errors.rs  events.rs
crates/forex-core/src/utils/: window_control.rs
crates/forex-data/: Cargo.toml
crates/forex-data/src/: lib.rs
crates/forex-models/: Cargo.toml
crates/forex-models/src/: base.rs  evaluation_helpers.rs  evolution.rs  exit_agent.rs  genetic.rs  hardware.rs  lib.rs  neural_networks.rs  neural_networks.rs.backup  onnx_exporter.rs  parallel_trainer.rs  registry.rs  rl.rs  transformer_nf.rs  transformers.rs  tree_models.rs  tree_models.rs_temp_header  tree_models_part2.rs  unsupervised.rs
crates/forex-models/tests/: integration_test.rs  tree_models_integration.rs
crates/forex-search/: Cargo.toml
crates/forex-search/src/: challenge.rs  discovery.rs  discovery_gpu.rs  eval.rs  gauntlet.rs  genetic.rs  lib.rs  portfolio.rs  quality.rs  stop_target.rs
data/news/: forex_factory_archive.csv
data/symbol=AUDUSD/timeframe=D1/: data.parquet
data/symbol=AUDUSD/timeframe=H1/: data.parquet
data/symbol=AUDUSD/timeframe=H2/: data.parquet
data/symbol=AUDUSD/timeframe=H4/: data.parquet
data/symbol=AUDUSD/timeframe=M1/: data.parquet
data/symbol=AUDUSD/timeframe=M15/: data.parquet
data/symbol=AUDUSD/timeframe=M3/: data.parquet
data/symbol=AUDUSD/timeframe=M30/: data.parquet
data/symbol=AUDUSD/timeframe=M5/: data.parquet
data/symbol=AUDUSD/timeframe=MN1/: data.parquet
data/symbol=AUDUSD/timeframe=W1/: data.parquet
data/symbol=EURGBP/timeframe=D1/: data.parquet
data/symbol=EURGBP/timeframe=H1/: data.parquet
data/symbol=EURGBP/timeframe=H2/: data.parquet
data/symbol=EURGBP/timeframe=H4/: data.parquet
data/symbol=EURGBP/timeframe=M1/: data.parquet
data/symbol=EURGBP/timeframe=M15/: data.parquet
data/symbol=EURGBP/timeframe=M3/: data.parquet
data/symbol=EURGBP/timeframe=M30/: data.parquet
data/symbol=EURGBP/timeframe=M5/: data.parquet
data/symbol=EURGBP/timeframe=MN1/: data.parquet
data/symbol=EURGBP/timeframe=W1/: data.parquet
data/symbol=EURJPY/timeframe=D1/: data.parquet
data/symbol=EURJPY/timeframe=H1/: data.parquet
data/symbol=EURJPY/timeframe=H2/: data.parquet
data/symbol=EURJPY/timeframe=H4/: data.parquet
data/symbol=EURJPY/timeframe=M1/: data.parquet
data/symbol=EURJPY/timeframe=M15/: data.parquet
data/symbol=EURJPY/timeframe=M3/: data.parquet
data/symbol=EURJPY/timeframe=M30/: data.parquet
data/symbol=EURJPY/timeframe=M5/: data.parquet
data/symbol=EURJPY/timeframe=MN1/: data.parquet
data/symbol=EURJPY/timeframe=W1/: data.parquet
data/symbol=EURUSD/timeframe=D1/: data.parquet
data/symbol=EURUSD/timeframe=H1/: data.parquet
data/symbol=EURUSD/timeframe=H2/: data.parquet
data/symbol=EURUSD/timeframe=H4/: data.parquet
data/symbol=EURUSD/timeframe=M1/: data.parquet
data/symbol=EURUSD/timeframe=M15/: data.parquet
data/symbol=EURUSD/timeframe=M3/: data.parquet
data/symbol=EURUSD/timeframe=M30/: data.parquet
data/symbol=EURUSD/timeframe=M5/: data.parquet
data/symbol=EURUSD/timeframe=MN1/: data.parquet
data/symbol=EURUSD/timeframe=W1/: data.parquet
data/symbol=GBPJPY/timeframe=D1/: data.parquet
data/symbol=GBPJPY/timeframe=H1/: data.parquet
data/symbol=GBPJPY/timeframe=H2/: data.parquet
data/symbol=GBPJPY/timeframe=H4/: data.parquet
data/symbol=GBPJPY/timeframe=M1/: data.parquet
data/symbol=GBPJPY/timeframe=M15/: data.parquet
data/symbol=GBPJPY/timeframe=M3/: data.parquet
data/symbol=GBPJPY/timeframe=M30/: data.parquet
data/symbol=GBPJPY/timeframe=M5/: data.parquet
data/symbol=GBPJPY/timeframe=MN1/: data.parquet
data/symbol=GBPJPY/timeframe=W1/: data.parquet
data/symbol=GBPUSD/timeframe=D1/: data.parquet
data/symbol=GBPUSD/timeframe=H1/: data.parquet
data/symbol=GBPUSD/timeframe=H2/: data.parquet
data/symbol=GBPUSD/timeframe=H4/: data.parquet
examples/: parallel_training.rs  tree_models_example.py  tree_models_rust_example.rs  true_parallel_training.rs
keys/: a6000  forex-canada-local  hyperstack_forex_ai_a4000  hyperstack_forex_ai_a6000
logs/training_20251218_193009/: events.out.tfevents.1766082609.red.19952.0
logs/training_20251219_014612/: events.out.tfevents.1766105172.red.2556.0
rust_core/: Cargo.toml
rust_core/src/: lib.rs
scripts/: launch_training.sh  prepare_ubuntu_24_04_py313.sh  setup_gpu.sh  setup_gpu_latest.sh  start_hpc_training.sh  train_multi_gpu.py  verify_bindings.py
src/forex_bot/: main.py
src/forex_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_genetic_evolution_settings.py  test_meta_blender_probs.py  test_mtf_alignment.py  test_no_bare_dataframe_truthiness.py  test_pipeline.py  test_system.py  test_talib_mixer_compute_signals.py  test_talib_mixer_knowledge.py  test_unsupervised.py  test_xgboost_labels.py
tmp_upload/: forex-ai-code.tgz
(+119 files in other folders)
