[package]
name = "forex-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "forex_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
pythonize = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
forex-core = { path = "../forex-core" }
forex-models = { path = "../forex-models" }
polars = { version = "0.52.0", features = ["lazy", "dtype-datetime"] }

[features]
default = []
lightgbm = ["forex-models/lightgbm"]
xgboost = ["forex-models/xgboost"]
catboost = ["forex-models/catboost"]
tree-models = ["lightgbm", "xgboost", "catboost"]
