[package]
name = "forex-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "forex_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
numpy = "0.27.1"
pythonize = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
ndarray = "0.16.1"
forex-core = { path = "../forex-core" }
forex-data = { path = "../forex-data" }
forex-models = { path = "../forex-models" }
forex-search = { path = "../forex-search" }
polars = { version = "0.52.0", features = ["lazy", "dtype-datetime", "timezones"] }

[features]
default = []
lightgbm = ["forex-models/lightgbm"]
xgboost = ["forex-models/xgboost"]
catboost = ["forex-models/catboost"]
tree-models = ["lightgbm", "xgboost", "catboost"]
