[package]
name = "forex-models"
version = "0.1.0"
edition = "2021"

[dependencies]
forex-data = { path = "../forex-data" }
ndarray = { version = "0.16.1", features = ["rayon", "serde"] } # Enable rayon and serde for ndarray
tch = { version = "0.22.0", optional = true }
ort = { version = "2.0.0-rc.10", optional = true, features = ["cuda", "copy-dylibs"] } # ONNX Runtime
pyo3 = { version = "0.27.2", features = ["auto-initialize"] } # Python bindings for neural networks
tracing = "0.1.41"
anyhow = "1.0.99"
thiserror = "2.0.14"

# Tree model dependencies
polars = { version = "0.52.0", features = ["lazy", "dtype-datetime", "rolling_window", "timezones"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# Tree model FFI bindings - Let cargo choose versions
lightgbm3 = { version = "1.0.8", optional = true, features = ["gpu", "cuda"] }
xgboost-rust = { version = "0.1.0", optional = true }
catboost-rust = { version = "0.3.4", optional = true, features = ["gpu"] }

# Deep Learning - Burn Framework - DISABLED temporarily due to yanked dependencies
# burn = { version = "*", optional = true }
# burn-ndarray = { version = "*", optional = true }
# burn-cuda = { version = "*", optional = true }
# burn-wgpu = { version = "*", optional = true }
# burn-tch = { version = "*", optional = true }
num_cpus = "1.17.0"
rand = "0.8.5"
rayon = "1.11.0"
chrono = "0.4.40"
lazy_static = "1.5.0"
# Temporarily disabled due to dependency issues
# cmaes = "*"
# linfa = "*"
# linfa-clustering = "*"
# muonts = "*"

[features]
default = []
onnx = ["dep:ort"]
tch = ["dep:tch"]
lightgbm = ["dep:lightgbm3"]
xgboost = ["dep:xgboost-rust"]
catboost = ["dep:catboost-rust"]
tree-models = ["lightgbm", "xgboost", "catboost"]

# Burn backends - DISABLED temporarily
# burn-ndarray-backend = ["burn", "burn-ndarray"]
# burn-cuda-backend = ["burn", "burn-cuda"]
# burn-wgpu-backend = ["burn", "burn-wgpu"]
# burn-tch-backend = ["burn", "burn-tch", "tch"]
# burn-kan = ["burn", "burn-efficient-kan"]  # Disabled - see KAN_COMPATIBILITY_ISSUE.txt
