[package]
name = "forex-search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.16"
forex-data = { path = "../forex-data" }
forex_core = { path = "../../rust_core" }
