[package]
name = "forex-search"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.40"
ndarray = { version = "0.16.1", features = ["rayon"] }
rand = "0.8.5"
rand_distr = { version = "0.4.3", optional = true }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
statrs = "0.16"
forex-data = { path = "../forex-data" }
tch = { version = "0.22.0", optional = true }

[features]
default = []
gpu = ["dep:rand_distr", "dep:tch"]
